--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
 <div class="container">
-  <h1> Introduction </h1>
+  <h1> Placating Plato with Plates of Pasta </h1>
+  <p> Welcome to our new online tool </p>
 </div>
 </body>
 </html>
