More Intex Updates that actually work

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
 <body>
 <div class="container">
   <h1> Placating Plato with Plates of Pasta </h1>
-  <p> Welcome to our new online tool </p>
+  <p> Welcome to our new online tool.</p>
+  <h4> What is Placating Plato? </h4>
+  <p> Explain </p>
+  <h4> Do I need an account? </h4>
+  <p> Explain </p>
+    <h4> How do I get Started\? </h4>
+  <p> Explain </p>
+
 </div>
 </body>
 </html>
