--- a/intro.html
+++ b/intro.html
@@ -2,6 +2,28 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>The Dining Philosophers Problem is a popular way of thinking about concurrency issues in computers.  Throughout this lesson you will learn how this problem is at work behind the scenes every time you use your computer.<br>
+<br>
+ALRIGHT!<br>
+<br>
+Suppose we have five philosophers sitting around a table.  Each philosopher has a plate of food in front of them.  Between each pair of philosophers is a single chopstick.  How do we get the philosophers to share the chopsticks without communicating and such that no philosopher starves?<br>
+<br>
+</p>
+
+<p>INSERT PRETTY PICTURES HERE</p>
+
+<p> Main problems to avoid:<br>
+<br>
+Deadlock:<br>
+</p>
+
+<p> INSERT ANIMATION OF PHILOSOPHERS DINING HERE</p>
+
+<p> Starvation: <br></p>
+
+<p> INSERT ANIMATION OF PHILOSOPHERS DINING HERE</p>
+
+<p> Continue on to learn about this junk. </p>
+
 </body>
 </html>
