--- a/example.html
+++ b/example.html
@@ -9,17 +9,17 @@
 <p>Why would it be bad:</p>
 
 <ul>
-	<li>There can be only 50 people at most play at the same time.</li>
-	<li>Each someone plays for a lot of time, then others will have no chance to play.</li>
+	<li>There can be only 50 people at most playing at the same time.</li>
+	<li>If someone plays for a lot of time, then others will have limited playing time, which is bad.</li>
 	<li>If someone enters without a helmet or jersey, he will be fined and given a penalty. :(</li>
-	<li>Deadlocks happen if someone has only helmet or jersey.&nbsp;</li>
+	<li>Deadlock happens if someone has only a helmet or a jersey.&nbsp;</li>
 	<li>Starvation happens if one could not get the equipments needed to play.</li>
 </ul>
 
 <p>Soultion:</p>
 
 <ul>
-	<li>We can set a rule that each player plays for a certain amount of time and then gives his gears to another person, and the rotation goes on.&nbsp;</li>
+	<li>We can set up a rule that each player plays for a certain amount of time and then gives his gears to another person, and the rotation goes on.&nbsp;</li>
 	<li>If a player has only helmet, then he needs to pass this helmet on to someone who only has a jersey.&nbsp;</li>
 	<li>Every ND player should play hard and respectfully.&nbsp;</li>
 </ul>
