--- a/interactiveExplanation.html
+++ b/interactiveExplanation.html
@@ -8,12 +8,13 @@
   
 <h1> Interactive Explanation</h1>
   
-<p>First let's look at the simplest case for the dining philsophers. This scenario involves just enough chopsticks
-  for the number of philosophers. Since each philsopher requires two chopsticks we can visualize the simplest case
-  as involving 2(x) chopsticks for x philosophers.</p>
+<p>To better understand the need for an automated solution to this problem, the following visualization has been designed.
+</p>
+
+<p>Click on a philosopher to change their state.
+</p>
   
-<img src="https://cloud.githubusercontent.com/assets/15079555/10419294/fa57ed82-7040-11e5-9165-95ede549fd99.png" style="width:500px;height:400px;"able.png">
-<p>i maed dis</p>
+
 
 </div>
 
