--- a/example.html
+++ b/example.html
@@ -2,7 +2,7 @@
 <title></title>
 </head>
 <body>
-<h2>Real Life xample&nbsp;</h2>
+<h2>Real Life Example&nbsp;</h2>
 
 <p>ND has the best football program in the whole country<img alt="wink" height="23" src="http://www.html.am/html-editors/ckeditor/ckeditor_4.4.1_full/plugins/smiley/images/wink_smile.png" title="wink" width="23" />, but something weird happens. There are 100 players on the team, but with only 50 helmets and jerseys available. Each player needs to put on a helmet and a jersey in order to play.</p>
 
