--- a/example.html
+++ b/example.html
@@ -4,14 +4,14 @@
 <body>
 <h2>Real Life Example&nbsp;</h2>
 
-<p>ND has the best football program in the whole country<img alt="wink" height="23" src="http://www.html.am/html-editors/ckeditor/ckeditor_4.4.1_full/plugins/smiley/images/wink_smile.png" title="wink" width="23" />, but something weird happens. There are 100 players on the team, but with only 50 helmets and jerseys available. Each player needs to put on a helmet and a jersey in order to play.</p>
+<p>ND has the best football program in the whole country, but something weird happens. There are 100 players on the team, but with only 50 helmets and jerseys available. Each player needs to put on a helmet and a jersey in order to play.</p>
 
 <p>Why would it be bad:</p>
 
 <ul>
 	<li>There can be only 50 people at most playing at the same time.</li>
 	<li>If someone plays for a lot of time, then others will have limited playing time, which is bad.</li>
-	<li>If someone enters without a helmet or jersey, he will be fined and given a penalty. :(</li>
+	<li>If someone enters without a helmet or jersey, he will be fined and given a penalty.</li>
 	<li>Deadlock happens if someone has only a helmet or a jersey.&nbsp;</li>
 	<li>Starvation happens if one could not get the equipments needed to play.</li>
 </ul>
