--- a/PPPP/example.html
+++ b/PPPP/example.html
@@ -4,7 +4,7 @@
 <body>
 <h2>Real Life Example&nbsp;</h2>
 
-<p>ND has the best football program in the whole country, but something weird happens. There are 100 players on the team, but with only 50 helmets and jerseys available. Each player needs to put on a helmet and a jersey in order to play.</p>
+<p>ND has the best football program in the whole country, but can't afford enough jerseys and helmets for each player. There are 100 players on the team, but with only 50 helmets and jerseys available. Each player needs to put on a helmet and a jersey in order to play.</p>
 
 <p>Why would it be bad:</p>
 
@@ -13,14 +13,14 @@
 	<li>If someone plays for a lot of time, then others will have limited playing time, which is bad.</li>
 	<li>If someone enters without a helmet or jersey, he will be fined and given a penalty.</li>
 	<li>Deadlock happens if someone has only a helmet or a jersey.&nbsp;</li>
-	<li>Starvation happens if one could not get the equipments needed to play.</li>
+	<li>Starvation happens when no more helmets or jerseys are available.</li>
 </ul>
 
 <p>Soultion:</p>
 
 <ul>
-	<li>We can set up a rule that each player plays for a certain amount of time and then gives his gears to another person, and the rotation goes on.&nbsp;</li>
-	<li>If a player has only helmet, then he needs to pass this helmet on to someone who only has a jersey.&nbsp;</li>
+	<li>We can set up a rule that each player plays for a certain amount of time then gives his gear to another person; this rotation then repeats.&nbsp;</li>
+	<li>If a player has only a helmet, he needs to pass his helmet on to someone who only has a jersey.&nbsp;</li>
 	<li>Every ND player should play hard and respectfully.&nbsp;</li>
 </ul>
 
