changes more werds I think?

--- a/PPPP/example.html
+++ b/PPPP/example.html
@@ -20,7 +20,7 @@
 
 <ul>
 	<li>We can set up a rule that each player plays for a certain amount of time then gives his gear to another person; this rotation then repeats.&nbsp;</li>
-	<li>If a player has only a helmet, he needs to pass his helmet on to someone who only has a jersey.&nbsp;</li>
+	<li>If a player only has a helmet, he needs to pass his helmet on to someone who only has a jersey.&nbsp;</li>
 	<li>Every ND player should play hard and respectfully.&nbsp;</li>
 </ul>
 
